--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -72,7 +72,7 @@ button, input[type=submit] {
   margin-bottom: 0.5rem;
 
   > span {
-    width: 20%;
+    width: 16%;
     text-align: center;
     padding: 0;
     cursor: pointer;
@@ -99,6 +99,13 @@ button, input[type=submit] {
       font-size: 200%;
       z-index: -1;
     }
+  }
+
+  > div {
+    width: 16%;
+    color: $cardinal-red;
+    display: inline-block;
+    text-align: center;
   }
 }
 
