rating number style for rushee page

--- a/views/scss/_rushee.scss
+++ b/views/scss/_rushee.scss
@@ -28,14 +28,18 @@
 
     > .rating {
       width: 100%;
+      font-size: 150%;
 
       > span {
-        font-size: 150%;
         color: #539e53; // mix with white at opacity 0.3
 
         &[active], &[active] ~ span, &[checked]:before {
           color: #fff;
         }
+      }
+
+      > div {
+        color: #fff;
       }
     }
 
