--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -62,6 +62,46 @@ button, input[type=submit] {
   }
 }
 
+// Histogram
+.histogram {
+  font-size: 125%;
+
+  .hist-bars {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+
+    > span[class^=hist-bar-] {
+      width: 19.6%;
+      background-color: $cardinal-red;
+      margin: 0 0.2%;
+
+      &:after {
+        content: attr(data-count);
+        position: relative;
+        top: -2rem;
+        width: 100%;
+        display: inline-block;
+        text-align: center;
+        color: $cardinal-red;
+      }
+    }
+
+    border-bottom: 0.1rem solid $primary-text-color;
+  }
+
+  .hist-labels {
+    width: 100%;
+
+    > span[class^=hist-label-] {
+      display: inline-block;
+      width: 20%;
+      color: $primary-text-color;
+      text-align: center;
+    }
+  }
+}
+
 // Star rating
 .rating {
   width: 100%;
