--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ mixin rushee(data)
       div.rushee-info.col-xl-10.col-lg-9.col-md-8.row
         div.rushee-stats.col-lg-4.col-md-6.clearfix
           h2.rushee-name #{data.name}
-          +rating(data.id, data.avg_rating)
+          +rating(data.id, data.avg_rating, data.num_ratings)
           +rush-attendance(data.event_attendance)
           div.top-traits-container.row
             each trait, idx in data.top_traits
