--- a/views/index.jade
+++ b/views/index.jade
@@ -28,7 +28,7 @@ block header
 
 block content
   script var rushees = !{JSON.stringify(rushees)};
-  input#rushee-filter.card-hover(type="search" autofocus="autofocus" placeholder="search")
+  input#rushee-filter.card-hover(type="search" placeholder="search")
   ol#rushee-list
     each rushee in rushees
       +rushee(rushee)
