--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ mixin rushee(data)
     a.row(href="/rushee/#{data.id}")
       img.rushee-picture.col-xl-2.col-lg-3.col-md-4(src=data.profile_picture)
       div.rushee-info.col-xl-10.col-lg-9.col-md-8.row
-        div.rushee-stats.col-lg-4.col-md-6.clearfix
+        div.rushee-stats.col-xl-4.col-lg-5.col-md-6.clearfix
           h2.rushee-name #{data.name}
           +rating(data.id, data.avg_rating, data.num_ratings)
           +rush-attendance(data.event_attendance)
@@ -20,7 +20,7 @@ mixin rushee(data)
                 +trait(trait).col-md-12.col-lg-6
           span.rushee-year #{data.year}.
           span.rushee-dorm #{data.dorm}
-        div.rushee-summary.col-lg-8.col-md-6
+        div.rushee-summary.col-xl-8.col-lg-7.col-md-6
           p #{data.summary == "" ? "No description yet" : data.summary}
 
 block header
