--- a/views/_mixins.jade
+++ b/views/_mixins.jade
@@ -17,7 +17,7 @@ mixin trait-vote(trait_full)
 mixin trait(trait)
   span.trait.card
     span.num-endorsements #{trait.votes}
-    span.trait-name #{trait.trait_name}
+    p #{trait.trait_name}
 
 mixin initials-box(name)
   span.name-box.card(title="#{name}")
