--- a/views/rushee.jade
+++ b/views/rushee.jade
@@ -23,12 +23,13 @@ mixin comment(comment)
     p #{comment.text}
 
 mixin trait-full(trait_full)
-  li.trait-full
+  li.trait-full.clearfix
     +trait-vote(trait_full)
-    +trait(trait_full)
     each active_name, idx in trait_full.actives
       - if (idx < 8)
         +initials-box(active_name)
+    //- Last because it has to fill remaining space
+    +trait(trait_full)
 
 block content
   script.
