endorsements on a single line

--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -181,11 +181,14 @@ button, input[type=submit] {
 }
 
 .trait-endorsements {
+  display: flex;
+  flex-direction: row-reverse;
 
   .name-box {
-    float: right;
+    // float: right;
     display: inline;
     margin: 0 0.1rem;
+  z-index: -10;
   }
 }
 
