--- a/views/scss/_index.scss
+++ b/views/scss/_index.scss
@@ -100,7 +100,8 @@
           padding-right: 0;
           border-right: 0;
           border-bottom: 0.1rem solid #ddd;
-          padding-bottom: 1rem;
+          padding-bottom: 0.5rem;
+          margin-bottom: 0.5rem;
         }
 
         .rating {
