fixed room number bug

--- a/views/rushee.jade
+++ b/views/rushee.jade
@@ -15,7 +15,7 @@ block header
           +rush-attendance(attendance)
           div.rushee-year-dorm
             span.rushee-year #{rushee.year}.
-            span.rushee-dorm #{rushee.dorm}
+            span.rushee-dorm #{rushee.dorm} #{rushee.room_number}
 
 mixin comment(comment)
   li.comment.clearfix
