--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block title
-  title Login - Phi Psi Rush Portal
+  title ΦKΨ Rush Portal - Login
 
 block header
   h1#title.card-shadow Phi Psi Rush Portal Login
