--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     block title
-      title Phi Psi Rush Portal
+      title ΦKΨ Rush Portal
     meta(name='description', content='Phi Psi\'s Rush Book')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/master.css')
