--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -20,8 +20,16 @@ $primary-text-color: #111;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: box-shadow 0.2s ease-in-out;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   &:hover, &:focus, &:active {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  }
+
+  &:disabled {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
 }
 
@@ -54,11 +62,17 @@ textarea, input[type=text], input[type=password] {
 
 button, input[type=submit] {
   background-color: $cardinal-red;
+  transition: background-color 0.2s ease-in-out;
   color: #fff;
   padding: 0.25rem 0.5rem;
 
   &:disabled {
     background-color: $inactive-color;
+    cursor: default;
+  }
+
+  &.card-hover {
+    transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   }
 }
 
@@ -154,7 +168,8 @@ button, input[type=submit] {
 // Traits
 .trait {
   margin: 0;
-  float: left;
+  padding: 0;
+  display: inline-block;
 
   > .num-endorsements {
     background-color: $cardinal-red;
@@ -163,13 +178,13 @@ button, input[type=submit] {
     min-width: 2.5rem;
     padding: 0.5rem;
     text-align: center;
-    float: left;
+    display: inline-block;
   }
 
   > p {
-    float: left;
     margin: 0;
     padding: 0.5rem;
+    display: inline;
   }
 }
 
@@ -180,20 +195,24 @@ button, input[type=submit] {
   padding: 0.5rem;
 }
 
+.trait-full {
+  display: flex;
+}
+
 .trait-endorsements {
   display: flex;
+  flex-grow: 1;
+  align-self: flex-end;
   flex-direction: row-reverse;
 
   .name-box {
-    // float: right;
     display: inline;
     margin: 0 0.1rem;
-  z-index: -10;
+    z-index: -10;
   }
 }
 
 .trait-vote {
-  float: left;
   display: inline-block;
 
   > input {
@@ -240,6 +259,20 @@ button, input[type=submit] {
 
   .attended-false {
     background-color: $inactive-color;
+  }
+}
+
+.xs-max-width-12 {
+  @media (max-width: 36em) {
+    max-width: 12em;
+    margin: 0 auto;
+  }
+}
+
+.sm-max-width-12 {
+  @media (max-width: 48em) {
+    max-width: 12em;
+    margin: 0 auto;
   }
 }
 
