--- a/views/register.jade
+++ b/views/register.jade
@@ -7,6 +7,7 @@ block header
   h1#title.card-shadow ΦKΨ Rush Registration
 
 block content
+  div#result-popup.popup
   form#register-form
     div.row
       div.col-sm-6
@@ -36,4 +37,5 @@ block content
 
 block scripts
   script(src="/js/webcam.min.js")
+  script(src="/js/popup.js")
   script(src="/js/register.js")
