--- a/views/scss/_register.scss
+++ b/views/scss/_register.scss
@@ -1,3 +1,10 @@
+#result-popup {
+  width: 25rem;
+  height: 5rem;
+  margin-left: -12.5rem;
+  margin-top: -2.5rem;
+}
+
 .input-item {
   display: flex;
 
