--- a/views/login.jade
+++ b/views/login.jade
@@ -4,15 +4,15 @@ block title
   title ΦKΨ Rush Portal - Login
 
 block header
-  h1#title.card-shadow Phi Psi Rush Portal Login
+  h1#title.card-shadow ΦKΨ Rush Portal Login
 
 block content
   form(action="/login", method="post")
     div.row
-      label.col-xs-2 Name
-      input.col-xs-10(type="text" name="username" placeholder="firstname lastname")
+      label.col-2 Name
+      input.col-10(type="text" name="username" placeholder="firstname lastname")
     div.row
-      label.col-xs-2 Password
-      input.col-xs-10(type="password" name="password" placeholder="2 words")
+      label.col-2 Password
+      input.col-10(type="password" name="password" placeholder="2 words")
     div
       input.card-hover(type="submit" value="Log In")
