add phone number, reduce  number of rush events to 4

--- a/views/register.jade
+++ b/views/register.jade
@@ -30,6 +30,9 @@ block content
           label Room number:
           input#rushee-room.required(type="text" name="room")
         div.input-item
+          label Phone number:
+          input#rushee-phone.required(type="text" name="phone")
+        div.input-item
           label Photo:
           button#capture-btn.card-hover(type="button" onclick="capture()") Take Photo
     div.row#submit-box
