--- a/views/scss/_index.scss
+++ b/views/scss/_index.scss
@@ -112,7 +112,7 @@
     }
 
     .rushee-summary > p {
-      max-height: 100%;
+      max-height: 12rem;
       overflow: hidden;
       margin: 0.5rem 0;
     }
