--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -193,6 +193,8 @@ button, input[type=submit] {
   margin: 0;
   padding: 0;
   display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
 
   > .num-endorsements {
     background-color: $cardinal-red;
@@ -219,22 +221,27 @@ button, input[type=submit] {
 }
 
 .trait-full {
-  display: flex;
+  width: 100%;
+  position: relative;
 
   .trait {
-    margin-left: 2rem;
+    position: absolute;
+    top: 0;
+    left: 2rem;
+    z-index: 10;
+  }
+
+  .trait-endorsements {
+    float: right;
   }
 }
 
 .trait-endorsements {
   display: flex;
-  flex-grow: 1;
-  align-self: flex-end;
   flex-direction: row-reverse;
 
   .name-box {
     margin: 0 0.1rem;
-    z-index: -10;
   }
 }
 
