--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -192,7 +192,7 @@ button, input[type=submit] {
 .trait {
   margin: 0;
   padding: 0;
-  display: block;
+  display: inline-block;
   white-space: nowrap;
   overflow: hidden;
   flex-shrink: 0;
