don't auto-log me in

--- a/views/login.jade
+++ b/views/login.jade
@@ -10,9 +10,9 @@ block content
   form(action="/login", method="post")
     div.row
       label.col-2 Name
-      input.col-10(type="text" name="username" placeholder="firstname lastname" value="Tyler Smith")
+      input.col-10(type="text" name="username" placeholder="firstname lastname")
     div.row
       label.col-2 Password
-      input.col-10(type="password" name="password" placeholder="2 words" value='test pwd')
+      input.col-10(type="password" name="password" placeholder="2 words")
     div
       input.card-hover(type="submit" value="Log In")
